# Trading

./: pyproject.toml  requirements.txt  requirements_old.txt
src/genetic_algorithm_for_trading/: chan.py
src/sandbox/: alpha_api_test.py
